<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Firebase TODO</string>

    <!-- Sign in -->
    <string name="sign_in_title" translatable="false">Firebase\nTODO</string>
    <string name="sign_in_failed">Sign in failed.</string>

    <!-- Task list -->
    <string name="task_list_title">TO-DO List</string>
    <string name="task_list_no_tasks">No TO-DOs"</string>
    <string name="task_list_create_task">Create</string>
    <string name="task_list_clear_completed">Clear completed</string>
    <string name="task_list_header_all" translatable="false">@string/task_list_filter_all</string>
    <string name="task_list_header_active" translatable="false">@string/task_list_filter_active</string>
    <string name="task_list_header_completed" translatable="false">@string/task_list_filter_completed</string>
    <string name="task_list_filter_label">TO-DO\'s Filter</string>
    <string name="task_list_filter_all">All</string>
    <string name="task_list_filter_active">Active</string>
    <string name="task_list_filter_completed">Completed</string>
    <string name="task_list_sort_by_label">Sort by</string>
    <string name="task_list_sort_by_title">Title</string>
    <string name="task_list_sort_by_created_date">Created Date</string>
    <!-- Edit task -->
    <string name="new_task_title">New TO-DO</string>
    <string name="new_task_create_failed">Failed to create new TO-DO.</string>
    <string name="new_task_create_successful">TO-DO created.</string>
    <string name="update_task_title">Update TO-DO</string>
    <string name="update_task_update_failed">Failed to update TO-DO.</string>
    <string name="update_task_update_successful">TO-DO updated.</string>
    <string name="edit_task_title_label">Title</string>
    <string name="edit_task_description_label">Description</string>
    <string name="edit_task_description_hint">Enter your TO-DO here.</string>
    <string name="edit_task_validation_empty_title">Fill TO-DO\'s title</string>

    <!-- Task detail -->
    <string name="task_detail_menu_delete">Delete</string>
    <string name="task_detail_created_at_label">Created at %1$s</string>
    <string name="task_detail_delete_failed">Failed to delete TO-DO.</string>

    <!-- Statistics -->
    <string name="statistics_title">Statistics</string>
    <string name="statistics_active_tasks">Active TO-DOs</string>
    <string name="statistics_completed_tasks">Completed TO-DOs</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_account_title">Account</string>
    <string name="settings_account_profile_key" translatable="false">account_profile</string>
    <string name="settings_account_sign_out_title">Sign out</string>
    <string name="settings_account_sign_out_key" translatable="false">account_sign_out</string>
    <string name="settings_account_sign_out_dialog_message">Sign out of this account?</string>
    <string name="settings_account_sign_out_dialog_positive">Sign out</string>
    <string name="settings_app_title">App</string>
    <string name="settings_app_source_code_title">Source code on GitHub</string>
    <string name="settings_app_source_code_url" translatable="false">https://github.com/droibit/kmm-firebase-todo-app</string>
    <string name="settings_app_open_source_licenses_title">Open source licenses</string>
    <string name="settings_app_open_source_licenses_key" translatable="false">Open source licenses</string>
    <string name="settings_app_build_version_title">Version</string>
    <string name="settings_app_build_version_summary" translatable="false">%1$s(%2$s)</string>
    <string name="settings_app_build_version_key" translatable="false">app_version</string>
</resources>