<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.github.droibit.firebase_todo.ui.main.task.list.TaskListViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:marginBottomNavInsets="@{true}">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
                android:id="@+id/appBarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/app_name"
                    app:menu="@menu/main"
                    app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <com.github.droibit.firebase_todo.ui.main.task.list.TaskListHeaderView
                    android:id="@+id/taskListHeaderView"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize" />

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="80dp"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:visibleUnless="@{viewModel.uiModel.showsTaskList}"
                tools:listitem="@layout/list_item_task" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/emptyView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                app:visibleUnless="@{viewModel.uiModel.showsEmptyView}"
                tools:visibility="gone">

                <ImageView
                    android:id="@+id/emptyIcon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:tint="?attr/colorError"
                    app:srcCompat="@drawable/ic_round_wb_sunny"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/emptyText"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/emptyText"
                    android:text="@string/task_list_no_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emptyIcon" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/task_list_create_task"
                android:clickable="true"
                android:focusable="true"
                android:layout_gravity="bottom|end"
                app:icon="@drawable/ic_round_add"
                app:fabSize="normal"
                tools:ignore="ContentDescription" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <com.github.droibit.firebase_todo.ui.common.ProgressView
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:background="?android:attr/colorBackground"
            app:visibleUnless="@{viewModel.uiModel.inProgress}"
            tools:visibility="gone" />
    </FrameLayout>
</layout>